internalAMS/force-app/main/default/objects/Department__c/fields/Department_Contact__c.field-meta.xml
<CustomField>
    <fullName>Department_Contact__c</fullName>
    <label>Department Contact</label>
    <type>Phone</type>
</CustomField>