internalAMS/force-app/main/default/objects/Department__c/fields/Department_Email__c.field-meta.xml
<CustomField>
    <fullName>Department_Email__c</fullName>
    <label>Department Email</label>
    <type>Email</type>
</CustomField>